// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReconSeverityBadge > matches ar (RTL) snapshot 1`] = `
<div>
  <div
    class="rounded-full px-2.5 py-0.5 transition-colors duration-150 focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 inline-flex items-center gap-1.5 text-xs font-medium border bg-red-50 text-red-900 dark:bg-red-900/20 dark:text-red-300 border-red-200 dark:border-red-800"
    data-testid="severity-badge-critical"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-shield-alert h-3 w-3"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
      />
      <path
        d="M12 8v4"
      />
      <path
        d="M12 16h.01"
      />
    </svg>
    <span>
      حرج
    </span>
    <span
      class="tabular-nums"
    >
      3
    </span>
  </div>
</div>
`;

exports[`ReconSeverityBadge > matches en snapshot 1`] = `
<div>
  <div
    class="rounded-full px-2.5 py-0.5 transition-colors duration-150 focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 inline-flex items-center gap-1.5 text-xs font-medium border bg-red-50 text-red-900 dark:bg-red-900/20 dark:text-red-300 border-red-200 dark:border-red-800"
    data-testid="severity-badge-critical"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-shield-alert h-3 w-3"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
      />
      <path
        d="M12 8v4"
      />
      <path
        d="M12 16h.01"
      />
    </svg>
    <span>
      Critical
    </span>
    <span
      class="tabular-nums"
    >
      3
    </span>
  </div>
</div>
`;
